# sklx

./: .pre-commit-config.yaml  README.md  docs-requirements.in  docs-requirements.txt  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test_sklx.py  test_skorch.py
.github/workflows/: pytest.yml  python-publish.yml
docs/: changelog.md  roadmap.md
sklx/: classifier.py  net.py  regressor.py
sklx/tests/: test_classifier.py  test_regressor.py
