[project]
name = "sklx"
version = "0.0.1"
dynamic = ["dependencies", "optional-dependencies"]
description = "A scikit-learn compatible neural network library that wraps MLX."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["sklx"]

license = {text = "BSD 3-Clause License"}

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "sklx/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
optional-dependencies.dev = { file = ["requirements-dev.in"] }


[tool.pip-tools]
generate-hashes = true